add_subdirectory(analysis2dSim)
add_subdirectory(convertLogFiles)
add_subdirectory(fastslam_VictoriaPark)
add_subdirectory(fastslam2dSim)
add_subdirectory(linearAssignment_CostMatrixPartitioning)
add_subdirectory(linearAssignment_LexicographicOrdering)
add_subdirectory(linearAssignment_MurtyAlgorithm)
add_subdirectory(ospaError)
add_subdirectory(rbphdslam_VictoriaPark)
add_subdirectory(rbphdslam2dSim)
add_subdirectory(spatialIndexTree)
